# ori_openGL

./: CMakeLists.txt  glad.c
1_base/: 2_triangle.cpp
1_base/1_window/: 1_window.cpp
1_base/2_triangle/: 2_triangle.cpp
1_base/3_shader/: 1_uniform.cpp  2_more_attribute.cpp  3_shader_from_file.cpp
1_base/4_textures/: 1_texture.cpp  2_texture.cpp
1_base/4_textures/helper/: shader.fs  shader_texture2.fs
1_base/5_transformations/: 1_transformation.cpp
1_base/5_transformations/helper/: shader_texture2.fs
depend/: shader_s.h
